<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TuTu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_route">Route</string>
    <string name="title_activity_fitness">Fitness</string>
    <string name="title_activity_maintenance">Maintenance</string>
    <string name="title_activity_social">Social</string>
    <string name="title_activity_install">Install</string>
    <string name="title_activity_save_variables">SaveVariables</string>
    <string name="title_activity_path_google_map">GoogleMap</string>

    <!-- OTHER STRINGS -->
    <string name="totalMiles">Total miles: </string>
    <string name="userWeight">enter your weight here</string>
    <string name="kgButton">in kgs</string>
    <string name="lbButton">in lbs</string>
    
    <!-- ROUTE FEATURE STRINGS -->
    <string name="routeTitle">Get Directions Here!</string>
    <string name="startPoint_hint">enter a starting location</string>
    <string name="endPoint_hint">enter ending location</string>
    <string name="startNavigation">Start Navigation</string>
    
    <!-- FITNESS FEATURE STRINGS -->
    <string name="fitnessTitle">Your Fitness Stats</string>
    <string name="totalTrips">Total trips: </string>
    <string name="avgCal">Average calories burned/trip: </string>
    <string name="totalCal">Total calories burned: </string>
    <string name="avgDist">Average distance/trip: </string>
    <string name="totalTripsNumber">0</string>
    <string name="totalMilesNumber">0</string>
    <string name="avgDistNumber">0</string>
    <string name="totalCalNumber">0</string>
    <string name="avgCalNumber">0</string>
    
    <!-- MAINTENANCE FEATURE STRINGS -->
    <string name="maintenanceTitle">Your Maintenance Stats</string>
    <string name="totalMaintenanceMiles">You have biked a total of: </string>
    <string name="checkChain">See if bike chain needs oiling in: </string>
    <string name="wheelTrueness">Check wheels for wobbling in: </string>
    <string name="bikeFrame">Inspect bike frame in: </string>
    <string name="checkWheels">Check wheels for loose spokes in: </string>
    <string name="lubeCables">Lubricate brake and gear cables in: </string>
    <string name="checkTires">Check tires in: </string>
    <string name="checkFraying">Check for fraying cables in: </string>
    <string name="replaceBrakes">Replace brake pads in: </string>
    <string name="tirePressure">Check tire pressure in: </string>
    <string name="checkBrakes">Check brakes in: </string>
    <string name="totalMaintenanceMilesNumber">0</string>
    <string name="checkChainNumber">0</string>
    <string name="wheelTruenessNumber">0</string>
    <string name="bikeFrameNumber">0</string>
    <string name="checkWheelsNumber">0</string>
    <string name="lubeCablesNumber">0</string>
    <string name="checkTiresNumber">0</string>
    <string name="checkFrayingNumber">0</string>
    <string name="replaceBrakesNumber">0</string>
    <string name="tirePressureNumber">0</string>
    <string name="checkBrakesNumber">0</string>
    

</resources>
