<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userWeightID"
        android:hint="@string/userWeight" 
        android:inputType="number"/>
    <Button
        android:id="@+id/kgB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kgButton" />
    <Button
        android:id="@+id/lbB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbButton" />

</LinearLayout>
