<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:background="@color/black" >
	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="20dp"
		    android:paddingBottom="20dp"
		    android:paddingLeft="20dp"
		    android:textColor="@color/Yellow"
		    android:textSize="34sp"
	        android:textStyle="italic"
		    android:text="@string/routeTitle" />
	    <EditText
	    	android:id="@+id/startPoint"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/Aqua"
	    	android:textColorHint="@color/Orange"
	    	android:paddingTop="20dp"
		    android:paddingLeft="20dp"
		    android:textSize="24sp"
	    	android:hint="@string/startPoint_hint"
	    	android:inputType="text" />
		<EditText
	    	android:id="@+id/endPoint"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/Aqua"
	    	android:textColorHint="@color/Orange"
	    	android:paddingTop="10dp"
		    android:paddingLeft="20dp"
		    android:textSize="24sp"
	    	android:hint="@string/endPoint_hint"
	    	android:inputType="text" />
			    
	    <Button
	        android:id="@+id/navigateB"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/Violet"
	        android:background="@color/Aqua"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingRight="10dp"
		    android:paddingLeft="10dp"
		    android:textSize="24sp"
	        android:text="@string/startNavigation" />
</LinearLayout>